--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "live-server",
-    "electron_start": "electron .",
+    "electron_start": "DBUS_SESSION_BUS_ADDRESS=\"autolaunch\" electron .",
     "build": "webpack --config webpack.config.prod.js"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "electron": "^28.0.0",
+    "electron": "^28.1.0",
     "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
