--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "Radio Player",
+  "name": "waves",
   "version": "3.0.0",
-  "description": "",
+  "description": "Play internet radio!",
   "private": true,
-  "main": "./main.js",
-  "license": "",
-  "author": "",
+  "main": "main.js",
+  "license": "UNLICENSED",
+  "author": "Bye <bye@byecorps.com>",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server",
-    "electron_start": "DBUS_SESSION_BUS_ADDRESS=\"autolaunch\" electron .",
-    "build": "webpack --config webpack.config.prod.js"
+    "start": "electron-forge start",
+    "electron_start": "ELECTRON_ENABLE_LOGGING=1 electron .",
+    "build": "webpack --config webpack.config.prod.js",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.3.1",
+    "@electron-forge/maker-deb": "^7.3.1",
+    "@electron-forge/maker-rpm": "^7.3.1",
+    "@electron-forge/maker-squirrel": "^7.3.1",
+    "@electron-forge/maker-zip": "^7.3.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.3.1",
+    "@electron-forge/plugin-fuses": "^7.3.1",
     "copy-webpack-plugin": "^11.0.0",
-    "electron": "^28.1.0",
+    "electron": "^29.1.1",
     "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
@@ -23,6 +32,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "mpris-service": "^2.1.2"
+    "@jellybrick/mpris-service": "^2.1.4",
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
