--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron-forge/maker-zip": "^7.3.1",
     "@electron-forge/plugin-auto-unpack-natives": "^7.3.1",
     "@electron-forge/plugin-fuses": "^7.3.1",
+    "@electron-forge/publisher-github": "^7.3.1",
     "copy-webpack-plugin": "^11.0.0",
     "electron": "^29.1.1",
     "html-webpack-plugin": "^5.5.3",
