--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waves",
-  "version": "3.0.0",
+  "version": "3.0.0-prealpha",
   "description": "Play internet radio!",
   "private": true,
   "main": "main.js",
