--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waves",
-  "version": "3.0.0-prealpha",
+  "version": "4.0.0-prealpha",
   "description": "Play internet radio!",
   "private": true,
   "main": "main.js",
@@ -8,28 +8,9 @@
   "author": "Bye <bye@byecorps.com>",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server",
-    "electron_start": "ELECTRON_ENABLE_LOGGING=1 electron .",
-    "build": "webpack --config webpack.config.prod.js",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "start": "live-server"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.3.1",
-    "@electron-forge/maker-deb": "^7.3.1",
-    "@electron-forge/maker-rpm": "^7.3.1",
-    "@electron-forge/maker-squirrel": "^7.3.1",
-    "@electron-forge/maker-zip": "^7.3.1",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.3.1",
-    "@electron-forge/plugin-fuses": "^7.3.1",
-    "@electron-forge/publisher-github": "^7.3.1",
-    "electron": "^29.1.1",
     "live-server": "^1.2.2"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@jellybrick/mpris-service": "^2.1.4",
-    "electron-squirrel-startup": "^1.0.0"
   }
 }
